--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".StartScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".Screen2" />
         <activity android:name=".Screen3" />
         <activity android:name=".Screen4" />
@@ -26,7 +19,15 @@
         <activity android:name=".DropTowerScreen" />
         <activity android:name=".DropTower_ResumeScreen" />
         <activity android:name=".Student_Srvcs_Resume_Screen" />
-        <activity android:name=".NewDropTower"></activity>
+        <activity android:name=".NewDropTower" />
+        <activity android:name=".NewStartScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".NewScreen2"></activity>
     </application>
 
 </manifest>
